k8s/deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-static
          image: mikeg7895/frontend-static:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service 
metadata:
  name: frontend-service 
spec: 
  selector: 
    app: frontend 
  ports:
    - protocol: TCP 
      port: 80 
      targetPort: 80
