k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: app-ingress
spec:
  rules:
    - host: mi.dominio.k8s 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
